--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - main-live
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -14,8 +14,6 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AUTHENDICATE_415D2 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_VOTING_81695 }}'
           channelId: live
-          projectId: authendicate-415d2
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          projectId: voting-81695
